--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1332,3 +1332,22 @@ booktitle = {Archiv. Math. Logik}
  pages = {35--40},
  numpages = {6}
 }
+
+@article{hindley1969principal,
+  title={The principal type-scheme of an object in combinatory logic},
+  author={Hindley, Roger},
+  journal={Transactions of the american mathematical society},
+  volume={146},
+  pages={29--60},
+  year={1969}
+}
+
+@article{milner1978theory,
+  title={A theory of type polymorphism in programming},
+  author={Milner, Robin},
+  journal={Journal of computer and system sciences},
+  volume={17},
+  number={3},
+  pages={348--375},
+  year={1978}
+}
